--- a/piAP.yml
+++ b/piAP.yml
@@ -7,15 +7,19 @@
   tasks: 
     - debug: msg="{{ raspbian_sd  }}" 
     - copy: src=files/dnsmasq.conf dest={{ raspbian_sd  }}/etc/dnsmasq.conf owner=root group=wheel mode=0644
-    - copy: src=files/hostpad.conf dest={{ raspbian_sd  }}/etc/hostapd.conf owner=root group=wheel mode=0644
+    - copy: src=files/hostapd.conf dest={{ raspbian_sd  }}/etc/hostapd.conf owner=root group=wheel mode=0644
     - copy: src=files/interfaces dest={{ raspbian_sd  }}/etc/network/interfaces owner=root group=wheel mode=0644
+    - copy: src=files/libnl-route-3-200_3.2.24-2_armhf.deb dest={{ raspbian_sd }}/var/tmp/libnl-route-3-200_3.2.24-2_armhf.deb owner=root group=wheel mode=0744
+    - copy: src=files/libmnl0_1.0.3-5_armhf.deb dest={{ raspbian_sd  }}/var/tmp/libmnl0_1.0.3-5_armhf.deb owner=root group=wheel mode=0744 
     - copy: src=files/libnetfilter-conntrack3_1.0.4-1_armhf.deb dest={{ raspbian_sd  }}/var/tmp/libnetfilter-conntrack3_1.0.4-1_armhf.deb owner=root group=wheel mode=0744
     - copy: src=files/dnsmasq-base_2.72-3+deb8u1_armhf.deb dest={{ raspbian_sd  }}/var/tmp/dnsmasq-base_2.72-3+deb8u1_armhf.deb owner=root group=wheel mode=0744
-    - copy: src=files/ldnsmasq_2.72-3+deb8u1_all.deb dest={{ raspbian_sd  }}/var/tmp/ldnsmasq_2.72-3+deb8u1_all.deb owner=root group=wheel mode=0744
+    - copy: src=files/dnsmasq_2.72-3+deb8u1_all.deb dest={{ raspbian_sd  }}/var/tmp/dnsmasq_2.72-3+deb8u1_all.deb owner=root group=wheel mode=0744
     - copy: src=files/hostapd_2.3-1+deb8u3_armhf.deb dest={{ raspbian_sd  }}/var/tmp/hostapd_2.3-1+deb8u3_armhf.deb owner=root group=wheel mode=0744
-    - copy: src=files/first-boot-setup dest={{ raspbian_sd  }}/usr/local/sbin/first-boot-setup owner=root group=wheel mode=0744
+    - copy: src=files/rc.local dest={{ raspbian_sd  }}/etc/rc.local owner=root group=wheel mode=0744
 
-    - shell: echo "PasswordAuthentication no" >> {{ raspbian_sd  }}/etc/ssh/sshd_config
-    - file: path={{ raspbian_sd }}/home/pi/.ssh state=directory owner=1000 group=1000 mode=0755
-    - file: path={{ raspbian_sd }}/home/pi/.ssh/authorized_keys state=touch owner=1000 group=1000 mode=0644
-    - shell: cat ~/.ssh/id_rsa.pub >> {{ raspbian_sd }}/home/pi/.ssh/authorized_keys
+    - lineinfile: dest={{ raspbian_sd  }}/etc/ssh/sshd_config line="PasswordAuthentication no" 
+    - file: path={{ raspbian_sd }}/home/pi/.ssh state=directory owner=root group=wheel mode=0755
+    - file: path={{ raspbian_sd }}/home/pi/.ssh/authorized_keys state=touch owner=root group=wheel mode=0644
+    - shell: cat ~/.ssh/id_rsa.pub
+      register: ssh_key
+    - lineinfile: dest={{ raspbian_sd }}/home/pi/.ssh/authorized_keys line="{{ ssh_key.stdout }}"
