--- a/templates/hostapd.conf
+++ b/templates/hostapd.conf
@@ -10,7 +10,7 @@ macaddr_acl=0
 auth_algs=1
 # Security parameters
 wpa=2
-wpa_passphrase=password
+wpa_passphrase={{ wifi_pass }} 
 wpa_key_mgmt=WPA-PSK
 wpa_pairwise=TKIP
 rsn_pairwise=CCMP
